@@ -126,27 +126,20 @@ for Applied Network Research and members of the Web Caching community.
 <P>There is a few known issues and limitations in this version of Squid which we hope to correct in a later release
 
 <descrip>
-<tag>Bug #761</tag>assertion failed: cbdata.c:249: "c-&gt;locks &gt; 0" when using diskd
-<tag>Bug #835</tag>assertion failed: pinger.c:187: "icmp_pktsize &lt;= MAX_PKT_SZ"
-<tag>Bug #853</tag>SIGSEGV on FTP PUT
-<tag>Bug #571</tag>need to close persistent connections when under high load
-<tag>Bug #856</tag>icon URLs are unneededly complex and often gets wrong
-<tag>Bug #592</tag>always/never_direct and NTLM authentication
-<tag>Bug #585</tag>cache_peer_access fails with NTLM authentication
-<tag>Bug #779</tag>users going above their allowed IP count no longer logged in cache.log
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=761" name="#761"></tag>assertion failed: cbdata.c:249: "c-&gt;locks &gt; 0" when using diskd
 
-<tag>deny_info</tag>deny_info only works for http_access, not for the acls listen in http_reply_access 
-<tag>Bug #692</tag>tcp_outgoing_address using an ident ACL does not work
-<tag>Bug #616</tag>Negative cached 404 replies with VARY header never matches
-<tag>Bug #581</tag>acl max_user_ip and multiple authentication schemes
-<tag>Bug #528</tag>miss_access fails on "slow" acl types such as dst.
-<tag>Bug #513</tag>squid -F is starting server sockets to early
-<tag>Bug #518</tag>wb_auth fails on TRU64 and probably other 64 bit platforms
-<tag>Bug #500</tag>delay_pools stops working on -k reconfigure
-<tag>Bug #457</tag>does not handle swap.state corruption properly
-<tag>Bug #426</tag>Vary: * does not work
-<tag>Bug #410</tag>unstable if runs out of disk space
-<tag>Bug #355</tag>diskd may appear slow on low loads
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=779" name="#779"></tag>users going above their allowed IP count no longer logged in cache.log
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=692" name="#692"></tag>tcp_outgoing_address using an ident ACL does not work
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=616" name="#616"></tag>Negative cached 404 replies with VARY header never matches
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=581" name="#581"></tag>acl max_user_ip and multiple authentication schemes
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=528" name="#528"></tag>miss_access fails on "slow" acl types such as dst.
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=513" name="#513"></tag>squid -F is starting server sockets to early
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=518" name="#518"></tag>wb_auth fails on TRU64 and probably other 64 bit platforms
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=500" name="#500"></tag>delay_pools stops working on -k reconfigure
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=457" name="#457"></tag>does not handle swap.state corruption properly
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=426" name="#426"></tag>Vary: * does not work
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=410" name="#410"></tag>unstable if runs out of disk space
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=355" name="#355"></tag>diskd may appear slow on low loads
 </descrip>
 
 <sect>Key changes squid-2.5.STABLE1 to 2.5.STABLE2:
